# MiningPhrases

./: README.md  main.py  pyproject.toml  requirements.txt
src/: anki_client.py  config.py  genai_client.py  gui.py  main.py  utils.py
