[project]
name = "miningphrases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-api-python-client>=2.190.0",
    "google-generativeai>=0.8.6",
    "pillow>=12.1.1",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
]
